[package]
name = "http-std"
description = "Standard, blocking I/O connector for http-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["http", "command", "spawn", "std", "blocking"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/http-std/latest/http_std"
repository = "https://github.com/pimalaya/http"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
	     
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dependencies]
http-lib = "0.1"
memchr = "2.7"
tcp-lib = "0.1"
tcp-std = "0.1"
tracing = "0.1"
